--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "expo-constants": "^16.0.2",
     "expo-font": "^12.0.10",
     "expo-linking": "^6.3.1",
-    "expo-notifications": "^0.28.18",
+    "expo-notifications": "~0.28.19",
     "expo-router": "^3.5.23",
     "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
